--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
   "email": "onimeleon@gmail.com",
   "ps1_hostname": "oniterm",
   "ps1_username": "khách",
-  "repo": "https://github.com/gopnikak47/LiveTerm",
+  "repo": "https://github.com/gopnikak47/personalterm",
   "resume_url": "chả có đâu, lười lắm!",
   "donate_urls": {
     "paypal": "https://paypal.me/onimeleon",
