--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
   },
   "email": "onimeleon@gmail.com",
   "ps1_hostname": "oniterm",
-  "ps1_username": "khách",
+  "ps1_username": "bạn iu",
   "repo": "https://github.com/gopnikak47/personalterm",
   "resume_url": "chả có đâu, lười lắm!",
   "donate_urls": {
